add d3 tip file

--- a/res/simian_viewer/simian_viewer.html
+++ b/res/simian_viewer/simian_viewer.html
@@ -15,8 +15,9 @@
     <link rel="stylesheet" type="text/css" href="../jslibs/material.min.css">
     <script src="../jslibs/material.min.js"></script>
 
-    <!-- d3 + colorbrewer -->
+    <!-- d3 + colorbrewer +d3Tip-->
     <script src="../jslibs/d3.v4.js"></script>
+    <script src="../jslibs/d3-tip.min.js"></script>
     <script src="../jslibs/d3-scale-chromatic.js"></script>
 
     <!-- d3 context menu -->
