Add chart to tooltip

--- a/res/simian_viewer/simian_viewer.html
+++ b/res/simian_viewer/simian_viewer.html
@@ -42,9 +42,11 @@
 </head>
 
 
+<div style="display: flex;justify-content: space-around;flex-wrap: wrap;">
+    <div id="my_dataviz" style="overflow: hidden; width: 70%; height: 100%"></div>
 
-<div id="my_dataviz" style="overflow:hidden; "></div>
-
+    <div id="my_container" style="width: 30%;height:100%"></div>
+</div>
 <script>
 
 
