--- a/res/simian_viewer/simian_viewer.html
+++ b/res/simian_viewer/simian_viewer.html
@@ -18,6 +18,7 @@
     <!-- d3 + colorbrewer +d3Tip-->
     <script src="../jslibs/d3.v4.js"></script>
     <script src="../jslibs/d3-tip.min.js"></script>
+    <script src="../jslibs/d3-tip.js"></script>
     <script src="../jslibs/d3-scale-chromatic.js"></script>
 
     <!-- d3 context menu -->
