--- a/res/simian_viewer/simian_viewer.html
+++ b/res/simian_viewer/simian_viewer.html
@@ -43,10 +43,10 @@
 </head>
 
 
-<div id="allVisDa" style="display: flex;justify-content: space-around;flex-wrap: wrap;">
-    <div id="my_dataviz" style="overflow: hidden; width: 70%; height: 100%"></div>
+<div id="allVisDa" style="display: flex;justify-content: space-around;flex-wrap: wrap;width:95%;height:98%">
+    <div id="my_dataviz" style="overflow: hidden; width: 68%; height: 100%"></div>
 
-    <div id="my_container" style="width: 30%;height:100%"></div>
+    <div id="my_container" style="width: 28%;height:100%"></div>
 </div>
 <script>
 
