set oncontextmenu="return false;"

--- a/res/simian_viewer/simian_viewer.html
+++ b/res/simian_viewer/simian_viewer.html
@@ -42,14 +42,10 @@
     <link rel="stylesheet" type="text/css" href="simian_viewer.css">
 </head>
 
+<body oncontextmenu="return false;">
+    <div id="allVisDa" style="display: flex;justify-content: space-around;flex-wrap: wrap;width:95%;height:98%" oncontextmenu="return false;">
+        <div id="my_dataviz" style="overflow: hidden; width: 75%; height: 100%"></div>
 
-<div id="allVisDa" style="display: flex;justify-content: space-around;flex-wrap: wrap;width:95%;height:98%">
-    <div id="my_dataviz" style="overflow: hidden; width: 75%; height: 100%"></div>
-
-    <div id="my_container" style="width: 25%;height:100%"></div>
-</div>
-<script>
-
-
-
-</script>
+        <div id="my_container" style="width: 25%;height:100%"></div>
+    </div>
+    </body>
