--- a/res/simian_viewer/simian_viewer.html
+++ b/res/simian_viewer/simian_viewer.html
@@ -41,7 +41,14 @@
     <!-- custom css -->
     <link rel="stylesheet" type="text/css" href="simian_viewer.css">
 </head>
-
+<script>
+    // This prevents zooming in using CTRL + mouse wheel.
+    document.addEventListener('wheel', function (e) {
+        e.ctrlKey && e.preventDefault();
+    }, {
+        passive: false,
+    });
+</script>
 <body oncontextmenu="return false;">
     <div id="allVisDa" style="display: flex;justify-content: space-around;flex-wrap: wrap;width:95%;height:98%" oncontextmenu="return false;">
         <div id="my_dataviz" style="overflow: hidden; width: 75%; height: 100%"></div>
