fix overlapping icons for small screens

--- a/res/simian_viewer/simian_viewer.html
+++ b/res/simian_viewer/simian_viewer.html
@@ -49,10 +49,10 @@
         passive: false,
     });
 </script>
-<body oncontextmenu="return false;">
-    <div id="allVisDa" style="display: flex;justify-content: space-around;flex-wrap: wrap;width:95%;height:98%" oncontextmenu="return false;">
+<body oncontextmenu="return false;" style="overflow: hidden;">
+    <div id="allVisDa" style="display: flex; justify-content: space-around; flex-wrap: wrap; width: 95%; height: 98%; overflow: hidden; " oncontextmenu="return false;">
         <div id="my_dataviz" style="overflow: hidden; width: 75%; height: 100%"></div>
 
-        <div id="my_container" style="width: 25%;height:100%"></div>
+        <div id="my_container" style="width: 25%; height: 100%; overflow: hidden; "></div>
     </div>
     </body>
