--- a/res/simian_viewer/simian_viewer.html
+++ b/res/simian_viewer/simian_viewer.html
@@ -58,8 +58,8 @@
         
 
         <div id="tooltipContainer" style="width: 20%; height: 100%; overflow: hidden; ">
-            <div id="axisClickContainer" style="width: 100%; height: 25%; "> </div>
-            <div id="cellClickContainer" style="width: 100%; height: 75%; "> </div>
+<!--            <div id="axisClickContainer" style="width: 100%; height: 25%; "> </div>-->
+            <div id="cellClickContainer" style="width: 100%; height: 100%; "> </div>
         </div>
 
     </div>
